Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "Double Click HERE to edit this markdown cell and write answers.\n",
     "\n",
-    "Numbers:\n",
+    "Numbers:numbers may be a integer or floating point numbers\n",
     "\n",
     "Strings:\n",
     "\n",
