Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -38,15 +38,15 @@
    "source": [
     "Double Click HERE to edit this markdown cell and write answers.\n",
     "\n",
-    "Numbers:\n",
+    "Numbers:\n", "Numbers are regular integer number we use"
     "\n",
-    "Strings:\n",
+    "Strings:\n", " Regular characters we use in the application like alphabets, number, special charach or the combination"
     "\n",
-    "Lists:\n",
+    "Lists:\n", "Array of values"
     "\n",
-    "Tuples:\n",
+    "Tuples:\n", "Immutable Lists"
     "\n",
-    "Dictionaries:\n"
+    "Dictionaries:\n" :"for Key value pair storage"
    ]
   },
   {
