--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -49,6 +49,9 @@
    "outputs": [],
    "source": [
     "#Code here"
+"start\n"
+"s\n"
+"sentence\n"
    ]
   },
   {
@@ -56,6 +59,9 @@
    "metadata": {},
    "source": [
     "______\n",
+"for word in st.splits():\n",
+"    if word[0]=='s':\n",
+"       print(word)"
     "**Use range() to print all the even numbers from 0 to 10.**"
    ]
   },
@@ -68,6 +74,7 @@
    "outputs": [],
    "source": [
     "#Code Here"
+"[0, 2, 4, 6, 8, 10]"
    ]
   },
   {
@@ -75,6 +82,7 @@
    "metadata": {},
    "source": [
     "___\n",
+"list(range(0,11,2))"
     "**Use a List Comprehension to create a list of all numbers between 1 and 50 that are divisible by 3.**"
    ]
   },
@@ -87,13 +95,14 @@
    "outputs": [],
    "source": [
     "#Code in this cell\n",
-    "[]"
+    "[3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+"[x for x in range(1,51) if x%3==0]"
     "_____\n",
     "**Go through the string below and if the length of a word is even print \"even!\"**"
    ]
@@ -118,12 +127,24 @@
    "outputs": [],
    "source": [
     "#Code in this cell"
+"word <-- has an even lenght:\n",
+"in <-- has an even lenght:\n"
+"this <-- has an even lenght:\n"
+"sentence <-- has an even lenght:\n"
+"that <-- has an even lenght:\n"
+"an <-- has an even lenght:\n"
+"even <-- has an even length:\n"
+"number <-- has an even lenght:\n"
+"of <-- has an even lenght:\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+"for word in st.split():\n",
+"    if len(word)%2 == 0:\n",
+"        print(word+\" <-- has an even lenght:\")"
     "____\n",
     "**Write a program that prints the integers from 1 to 100. But for multiples of three print \"Fizz\" instead of the number, and for the multiples of five print \"Buzz\". For numbers which are multiples of both three and five print \"FizzBuzz\".**"
    ]
@@ -137,6 +158,15 @@
    "outputs": [],
    "source": [
     "#Code in this cell"
+"for num in range(1,101):\n",
+"    if num % 3 == 0 and num % 5 == 0:\n"
+"        print(\"FizzBuzz\")\n",
+"    elif num % 3 == 0:\n",
+"        print(\"Fizz\")\n",
+"    elif num % 5 == 0:\n",
+"        print(\"Buzz\")\n",
+"    else:\n",
+"        print(num)"
    ]
   },
   {
@@ -167,12 +197,14 @@
    "outputs": [],
    "source": [
     "#Code in this cell"
+"['C', 'a', 'l', 'o', 't', 'f', 'l', 'o', 'e', 'w', 'i', 't', 's']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+"[word[0] for word in st.split()]"
     "### Great Job!"
    ]
   }
