--- a/00-Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
+++ b/00-Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
@@ -47,17 +47,70 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "s=\"dick\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm going to inject something here.\n"
+      "I'm going to inject dick here.\n"
      ]
     }
    ],
    "source": [
-    "print(\"I'm going to inject %s here.\" %'something')"
+    "print(\"I'm going to inject %s here.\" %s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y=5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z=x+y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(z)"
    ]
   },
   {
@@ -69,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,8 +185,7 @@
     }
    ],
    "source": [
-    "print('He said his name was %s.' %'Fred')\n",
-    "print('He said his name was %r.' %'Fred')"
+    "print"
    ]
   },
   {
@@ -570,7 +622,8 @@
    "source": [
     "name = 'Fred'\n",
     "\n",
-    "print(f\"He said his name is {name}.\")"
+    "print(f\"He\n",
+    "      said his name is {name}.\")"
    ]
   },
   {
@@ -702,7 +755,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -716,7 +769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
